<resources>
    <string name="app_name" translatable="false">OuiLift</string>
    <string name="btn_profile_member">I am member</string>
    <string name="btn_profile_non_member">I am not member</string>
    <string name="email_hint" translatable="false">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="btn_login_text">Login</string>
    <string name="link_sign_up_text">No account yet? Create one</string>
    <string name="title_activity_search" translatable="false">SearchActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_search">Search</string>
    <string name="date_format">yyyy-MM-dd</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="route_date">Date</string>
    <string name="route_hour">Hour</string>
    <string name="route_to">To</string>
    <string name="route_from">From</string>
    <string name="route_price">Price</string>
    <string name="route_place">Place</string>
    <string name="key_file" translatable="false">key_file</string>
    <string name="find_route">Find your route</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_confirmation" translatable="false">Confirmation</string>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="last_name_error" translatable="false">at least 3 characters</string>
    <string name="first_name_error" translatable="false">at least 3 characters</string>
    <string name="email_error" translatable="false">enter a valid email address</string>
    <string name="phone_error" translatable="false">enter a valid phone number</string>
    <string name="password_error" translatable="false">enter a valid password</string>
    <string name="confirmation_error" translatable="false">enter a valid password confirmation</string>
    <string name="available_place">Available Place</string>
    <string name="reservation_place">Place number</string>
    <string name="reservation_btn">Reserve my places</string>
    <string name="route_detail">Route detail</string>
    <string name="menu_setting">My Account</string>
    <string name="menu_reservation">Reservations</string>
    <string name="menu_search">Search</string>
    <string name="place_singular" translatable="false">Place</string>
    <string name="place_plural" translatable="false">Places</string>
    <string name="cancel_reservation">Cancel Reservation</string>
    <string name="book_route">Book your trip</string>
    <string name="departure_on">Departure on </string>
    <string name="departure_at">at </string>
    <string name="place_to_book">Number of places to book </string>
    <string name="reset">Reset </string>
    <string name="no_route">Sorry, I don\'t have a route for you </string>
    <string name="login_error">Sorry, I am not able to recognize you </string>
    <string name="in_connexion">I\'m searching your information… </string>
    <string name="disconnection">Disconnection… </string>
    <string name="btn_my_routes">My routes</string>
    <string name="btn_change_settings">Change information</string>
    <string name="old_pass_hint">Old Password</string>
    <string name="btn_change_pass">Change Password</string>
    <string name="menu_departure">Departure</string>
    <string name="driver_number">Driver Number</string>
    <string name="btn_add_car">New</string>
    <string name="choose_your_car_label">Choose your car</string>
    <string name="car_model">Brand / model</string>
    <string name="car_color">Color</string>
    <string name="car_number">Registration</string>
    <string name="car_year">Year</string>
    <string name="after_registration_message">Your account have been created successfully. An activation code has been sent to your email address. Please check the code to activate your account. Log in to continue </string>
    <string name="error_label">error</string>
    <string name="car_hint">Car</string>
    <string name="create_route">Ready to announce route ?</string>
    <string name="change_password">Change Password</string>
    <string name="change_mail">Change Email</string>
    <string name="set_registration">Set Driving Licence </string>
    <string name="activate_account">Activate Account</string>
    <string name="activation_code">Activation Code</string>
    <string name="account_in_progress">Creation in progress &#8230;</string>
    <string name="in_progress">In progress &#8230;</string>
    <string name="no_reservation">No Reservation</string>
    <string name="cancel_route">Cancel Route</string>
    <string name="error_message">An error has occurred during operation. Try it later</string>
    <string name="register_done_message">Successful registration </string>
    <string name="success_message">Successful Operation</string>
    <string name="error_route_place">Place must be between 1 and 3 </string>
    <string name="password_forget_hint">Forget password</string>
    <string name="btn_sent_hint">Sent</string>
    <string name="route_search_hint">Town or area</string>
    <string name="password_recovery_hint">Enter the E-Mail address used when creating your account. A temporary password will be sent to you at this address</string>
</resources>
