<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.ReservationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/menu_reservation"
            android:layout_margin="0dp"
            android:background="@color/colorAccent"
           android:textColor="@android:color/white"
            android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/activity_vertical_margin">


        <LinearLayout
            style="@style/reservation_item_view_style">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/route_date"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:id="@+id/route_date"/>
        </LinearLayout>
        <LinearLayout
            style="@style/reservation_item_view_style">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/route_hour"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:id="@+id/route_hour"/>
        </LinearLayout>
        <LinearLayout
            style="@style/reservation_item_view_style">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/route_from"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:id="@+id/route_from"/>
        </LinearLayout>
        <LinearLayout
            style="@style/reservation_item_view_style">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/route_to"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:id="@+id/route_to"/>
        </LinearLayout>
        <LinearLayout
            style="@style/reservation_item_view_style">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/route_price"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:id="@+id/route_price"/>
        </LinearLayout>
        <LinearLayout
            style="@style/reservation_item_view_style">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/available_place"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:id="@+id/route_place"/>
        </LinearLayout>

        <LinearLayout
            style="@style/reservation_item_view_style">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/reservation_place"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_reservation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reservation_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reservation_btn"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:backgroundTint="@android:color/tertiary_text_light"
            />

    </LinearLayout>
    </LinearLayout>

    <include layout="@layout/view_loading"/>

    <include layout="@layout/navigation_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>