<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView android:src="@drawable/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/img_logo"
        android:layout_centerInParent="true"
        >

        <!-- last name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/last_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- fist name Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/first_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- phone Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_number" />
        </com.google.android.material.textfield.TextInputLayout>
    <!-- Email Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

        <!-- confirmation Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_login_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_confirmation"/>
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/create_account"/>

    </LinearLayout>



</RelativeLayout>