<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.account.SettingsActivity">
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/top_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            android:id="@+id/active_container"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_activate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/activation_code" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_activate_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_activate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activate_account"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            android:id="@+id/mail_container"
            android:layout_below="@id/active_container"
            android:layout_marginTop="10dp">

            <!-- email -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_mail_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint" />
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_mail"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            android:id="@+id/login_container"
            android:layout_below="@id/mail_container"
            android:layout_marginTop="10dp">

            <!-- last name Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/last_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- fist name Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/first_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- phone Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/phone_number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_change_settings"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            android:id="@+id/pass_container"
            android:layout_marginTop="10dp"
            android:layout_below="@id/login_container">


            <!-- old password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_login_old_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/old_pass_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- confirmation Label -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_login_confirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_confirmation"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_change_pass"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_corner"
            android:id="@+id/driver_container"
            android:layout_marginTop="10dp"
            android:layout_below="@id/pass_container">

            <!-- old password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- driving -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_driving_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/driver_number" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_diver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_registration"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"

                />
        </LinearLayout>

    </RelativeLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_disconnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnection"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_below="@id/top_container"
        />

        </RelativeLayout>

    </ScrollView>


    <include layout="@layout/navigation_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>