<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.search.ResultFragment"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginTop="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/find_route"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>

   <Spinner
       android:id="@+id/from_spinner"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:spinnerMode="dialog"
       android:layout_marginBottom="20dp"
       >

   </Spinner>

    <Spinner
        android:id="@+id/to_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:layout_marginBottom="20dp"
        >

    </Spinner>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/route_date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_search_24px"
        android:text="@string/title_search"
        />

</LinearLayout>